--- a/index.html
+++ b/index.html
@@ -1,76 +1,66 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OxieNetwork | Box PvP Sunucusu</title>
-  <style>
-    body {
-      background: #121212;
-      color: #eee;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      color: #f39c12;
-    }
-    .ip {
-      font-size: 1.5rem;
-      margin: 20px 0;
-      padding: 10px;
-      background: #222;
-      border-radius: 10px;
-      display: inline-block;
-      cursor: pointer;
-      user-select: all;
-      transition: background 0.3s;
-    }
-    .ip:hover {
-      background: #f39c12;
-      color: #121212;
-    }
-    a.button {
-      display: inline-block;
-      margin: 15px 10px;
-      padding: 15px 30px;
-      background: #f39c12;
-      color: #121212;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-      transition: background 0.3s;
-    }
-    a.button:hover {
-      background: #d78c0f;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>OxieNetwork Sunucu</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #121212;
+    color: white;
+  }
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(90deg, #1f1f1f, #3a3a3a);
+    padding: 15px 30px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+  }
+  .logo {
+    font-size: 28px;
+    font-weight: 900;
+    color: #00ffea;
+    letter-spacing: 3px;
+    cursor: default;
+  }
+  nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+  }
+  nav ul li {
+    cursor: pointer;
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
+    transition: color 0.3s ease;
+  }
+  nav ul li a:hover {
+    color: #00ffea;
+  }
+</style>
 </head>
 <body>
-  <h1>OxieNetwork Box PvP Sunucusu</h1>
 
-  <p>Oyuna bağlanmak için IP adresimizi kopyala:</p>
-  <div class="ip" onclick="copyIP()">play.oxienetwork.com</div>
+<header>
+  <div class="logo">OXIE</div>
+  <nav>
+    <ul>
+      <li><a href="#">Ana Sayfa</a></li>
+      <li><a href="#">Hakkında</a></li>
+      <li><a href="#">Mağaza</a></li>
+      <li><a href="#">Destek</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <a href="minecraft://play.oxienetwork.com" class="button">Minecraft'ta Aç</a>
-  <a href="https://discord.gg/oyundiscord" target="_blank" class="button">Discord'a Katıl</a>
-
-  <footer>
-    <p>© 2025 OxieNetwork - Tüm hakları saklıdır.</p>
-  </footer>
-
-  <script>
-    function copyIP() {
-      const ipText = document.querySelector('.ip').textContent;
-      navigator.clipboard.writeText(ipText).then(() => {
-        alert('IP adresi kopyalandı: ' + ipText);
-      });
-    }
-  </script>
 </body>
 </html>
